# bmo

./: .gitlab-ci.yml  .gitmodules  BMO.nimble  Makefile  README.md  bmo.html  bmo.nimble  config.nims  index.html  mkdocs.yml  pyproject.toml  theindex.html
.ci/: build_and_test_linux.sh  build_and_test_windows.ps1  debian10.sh
.github/workflows/: linux.yml  windows.yml
bmo/: __init__.py  cicd.py  common.py  doctor.py  info.py  main.py  network.py  org.py  run.py  subcom.py
bmo/helpers/: notion.py
bmopkg/: command.html  command.idx  common.html  common.idx  install.html  install.idx  subcom.html  subcom.idx
data/: .pre-commit-config.yaml
docs/: conf.py  index.md
docs/source/: index.rst
src/: BMO.nim  bmo.nim
src/BMOpkg/: submodule.nim
src/bmopkg/: cli.nim  command.nim  common.nim  install.nim  subcom.nim
tests/: test1.nim  test_bmo.nim  test_bmo.py  test_bmo_network.py  test_cmd.nim  test_install.nim
